Updates to the documentation

--- a/docs/getting-started/01.quick-start.md
+++ b/docs/getting-started/01.quick-start.md
@@ -1,10 +1,10 @@
 # Quick start guide
 
-If you are starting froms cratch, you can use the quick install below. If you already have a project, you can follow the manual install steps below to add CjkCMS as a new app into your Wagtail project.
+If you are starting froms cratch, you can use the quick install & configuration steps below. If you already have a wagtail project, you can follow the [manual configuration](20.configuration.md) steps below to add CjkCMS as a new app into your Wagtail project.
 
 ## Quick install of the CjkCMS, Django and Wagtail
 
-* CjkCMS requires Django==4.x and Wagtail>=4.2.
+* CjkCMS requires Django==4.x and Wagtail>=5.1.
 
 Install the CjkCMS:
 ```
@@ -26,7 +26,6 @@ Next steps:
     4. python manage.py runserver
     5. Go to http://localhost:8000/backend/ and start editing!
 ```
----
 
-## Manual install
-If you already have a Wagtail project, follow the [manual install](installation.md) steps to add CjkCMS as a new app.
+!!! note
+    If you want to switch from the default SQLite database to PostgreSQL, do it before executing step #2 above (migrations).
