Updates in docs

--- a/docs/getting-started/04.configuration.md
+++ b/docs/getting-started/04.configuration.md
@@ -23,6 +23,9 @@ Next steps:
 
 If you want to add CjkCMS to an existing Wagtail site, or if you prefer to manually configure CjkCMS in a new or existing Wagtail site, follow these steps:
 
+> Note: all steps below (including changes to the homepage) are required only for manual setup. 
+> They are automatically applied when using the "quick start" / automatic configuration procedure.
+
 * Add CjkCMS and its requirements to ```INSTALLED_APPS``` in your project configuration (e.g. ```base.py```):
 ```python
 INSTALLED_APPS = [
