Updated docs for webpack config. Version up.

--- a/docs/getting-started/04.configuration.md
+++ b/docs/getting-started/04.configuration.md
@@ -3,6 +3,8 @@
 ## Automatic (for new projects)
 If you are starting a fresh, new Wagtail site use the "quick start" procedure - a script will set up for you a new wagtail project with CjkCMS added to INSTALLED_APPS, and with basic page types configured and ready for editing content:
 
+### Default theming (CDN-based Bootstrap 5.3 or MDBoostrap)
+
 ```
 cjkcms start myproject
 ```
@@ -18,6 +20,10 @@ Next steps:
     4. python manage.py runserver
     5. Go to http://localhost:8000/backend/ and start editing!
 ```
+
+### Webpack-based theming (Bootstrap 5.3 or MDBoostrap)
+If you intend to use Webpack-based Bootstrap to modify the default theme, use the advanced "webpack" project template, as described [here](../configuration/webpack.md).
+
 
 ## Manual (for both new and existing Wagtail sites)
 
