--- a/docs/getting-started/01.quick-start.md
+++ b/docs/getting-started/01.quick-start.md
@@ -4,7 +4,7 @@ If you are starting froms cratch, you can use the quick install & configuration 
 
 ## Quick install of the CjkCMS, Django and Wagtail
 
-* CjkCMS requires Django==4.x and Wagtail>=5.1.
+* CjkCMS requires Django>=4.x,<6.0 and Wagtail>=5.1.
 
 Install the CjkCMS:
 ```
